artifactory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: artifactory
  namespace: "tools"
spec:
  ingressClassName: nginx
  rules:
  - host: "tooling.artifactory.mayorfaj.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory-artifactory-nginx
            port:
              number: 80
  tls:
  - hosts:
    - "tooling.artifactory.mayorfaj.io"
    secretName: "tooling.artifactory.mayorfaj.io"

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: artifactory
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "tooling.artifactory.mayorfaj.io"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: artifactory
#             port:
#               number: 8082

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   name: artifactory
#   namespace: "tools"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "tooling.artifactory.mayorfaj.io"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: artifactory
#             port:
#               number: 8082
#   tls:
#   - hosts:
#     - "tooling.artifactory.mayorfaj.io"
#     secretName: "tooling.artifactory.mayorfaj.io"
